# minishell

./: #readline.o#  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  command.c  env_commands.c  errors.c  main.c  minishell  minishell.cbp  readline.c
.github/workflows/: c-cpp.yml
includes/: mshheader.h
includes/libft/: Makefile  a.out  errors.c  ft_abortalloc.c  ft_atoi.c  ft_isalpha.c  ft_isdigit.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memdel.c  ft_memmove.c  ft_pow.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_realloc.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strnequ.c  ft_strnew.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_toupper.c  get_next_line.c
includes/libft/ft_printf/: colour_extra.c  ft_itoa_base.c  ft_printf.c  ldbl_copy.c  ldbl_extract.c  long_math.c  percent.c  type_s.c
includes/libft/hash_table/: a.out  hash.c  hash.h  hash.h.gch  hash_functions.c  hash_init.c
includes/libft/hash_table/a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/libft/includes/: get_next_line.h  hash.h  ldbl_header.h  libft.h  libftprintf.h
libft/: Makefile  author  ft_atol.c  ft_bzero.c  ft_countdigits.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstdel.c  ft_lstmap.c  ft_lstnew.c  ft_memcpy.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_strclen.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strtrim.c  ft_tolower.c  ft_wordcount.c
libft/ft_printf/: ft_for_p.c  ft_itoa_base.c  ft_new.c  percent.c  rounding.c  type_c.c  type_i_d.c
libft/includes/: libft.h
minishell/: CMakeLists.txt  Makefile
minishell.dSYM/Contents/Resources/DWARF/: minishell
minishell/src/: command.c  env_extra_funct.c  env_funct.c  env_tmp_funct.c  general_bultins.c  main.c  minishell.c  readline.c
refs/heads/: master
src/: command.c  env_commands.c  env_extra_funct.c  extension.c  general_bultins.c  main.c  minishell.c  readline.c
test/: smoke_test.sh
